2011-02-16  Lucas M. Schnorr <schnorr@gmail.com>
    * General/PajeType.[mh],
      PajeSimulator/PajeSimul+Events.m
      PajeSimulator/PajeSimul.m: bugfix, multiple types with same name
      are correctly managed by the simulator. Types were used as keys
      in the userEntities dictionary, but their hashes were the name,
      and not the unique identifier of the type (an optional alias).
      This commit addresses this issue by creating a new attribute to
      the PajeType that corresponds to the alias defined in the trace
      or the name (if alias not present). PajeTypes' hash is based
      on this new attribute.

2010-12-15  Lucas M. Schnorr <schnorr@gmail.com>
    * Paje/Paje.gorm/*: bugfix, changing the selected filter on popup updates
      the current filter of the "Filter" window

2010-11-24  Lucas M. Schnorr <schnorr@gmail.com>
    * FileReader/PajeFileReader.[hm]: method to obtain the porcentage
      of the trace file that has already been read.

2010-07-13  Lucas M. Schnorr <schnorr@gmail.com>
    * FileReader/PajeFileReader.[hm], General/Protocols.h: let the user
      specify the chunk size used during the reading of a trace file.

2010-07-01  Lucas M. Schnorr <schnorr@gmail.com>
    * General/PajeFilter.[hm], StorageController/AnchorFilter.m: fixing the
      return type for the protocol method containerTypeForType (it was
      PajeEntityType, but it always return PajeContainerType).
    * Removed some compilation warnings

2010-03-10  Lucas M. Schnorr <schnorr@gmail.com>
    * PajeSimulator/SimulContainer.[mh]: maxValueForEntityType and
      minValueForEntityType were returning NSNumber* instead of double (as
      defined by the PajeFilter protocol).

2010-02-23  Benhur Stein <benhur@inf.ufsm.br>
    * Documentation/lang-paje/typeevent.tex, PajeSimulator/PajeSimul+Events.m,
      PajeSimulator/PajeSimul.m: some code cleanup; change the way aliases
      work: now, if an alias is defined, all references must be to the alias,